--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="name">Name</string>
     <string name="signOut">Выход</string>
     <string name="new_message_button">Новое сообщение</string>
+    <string name="username">Username</string>
 </resources>
